[package]
name = "modpub"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
clap = { version = "4.5.9", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
